--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <div class="container">
         <!-- dec -->
         <div class="things__dec">
-          <img src="./img/things-dec-l.png" alt="illustration of leaf" />
+          <img src="" alt="illustration of leaf" />
         </div>
         <!-- dec -->
         <div class="things__dec">
-          <img src="./img/things-dec-r.png" alt="illustration of leaf" />
+          <img src="https://drive.google.com/file/d/1Hbd9MJX3BQelaXsz42S4qaCHIY-xCrDh/view?usp=share_link" alt="illustration of leaf" />
         </div>
         <!-- heading -->
         <h2>Things I Do</h2>
