--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         </div>
         <!-- dec -->
         <div class="things__dec">
-          <img src="https://drive.google.com/file/d/1Hbd9MJX3BQelaXsz42S4qaCHIY-xCrDh/view?usp=share_link" alt="illustration of leaf" />
+          <img src="./img/things-dec-r.png" alt="illustration of leaf" />
         </div>
         <!-- heading -->
         <h2>Things I Do</h2>
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/Jút do it.svg" alt="illustration of women" />
+          <img src="https://drive.google.com/file/d/1Hbd9MJX3BQelaXsz42S4qaCHIY-xCrDh/view?usp=share_link" alt="illustration of women" />
           <!-- text -->
           <div class="things__item--heading">
             <h3>Lorem Ispum</h3>
