--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <!-- img -->
         <div class="banner__img">
-          <img src="./img/_DSC3235-Edit.png" alt="it's me" />
+          <img src="https://drive.google.com/file/d/1Dc7a7DNZH5Xrub53k4haV-YKvs_hTY0Q/view?usp=share_link" alt="it's me" />
         </div>
         <!-- heading -->
         <div class="banner__heading">
