--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
       <div class="container">
         <!-- img -->
         <div class="banner__img">
-          <img src="https://drive.google.com/file/d/1Dc7a7DNZH5Xrub53k4haV-YKvs_hTY0Q/view?usp=share_link" alt="it's me" />
+          <img src="http://drive.google.com/uc?export=view&id=1Dc7a7DNZH5Xrub53k4haV-YKvs_hTY0Q" alt="it's me" />
+      <!-- http://drive.google.com/uc?export=view&id= -->
+
         </div>
         <!-- heading -->
         <div class="banner__heading">
