--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
           <!-- logo -->
           <div class="navbar__logo">
-            <img src="./img/Jút do it.svg" alt="website logo" />
+            <img src="http://drive.google.com/uc?export=view&id=1o0RrC75fE1Hf3lJr70dceS503LuEhu6X" alt="website logo" />
           </div>
           <!-- links -->
           <ul class="navbar__links">
