--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="container">
         <div class="cv__item">
           <h1> MY CV </h1>
-          <img class="cv" src="./img/cv-20233.jpg" alt="CV">
+          <img class="cv" src="http://drive.google.com/uc?export=view&id=1npbjxRtGoNlYOP3PkbmIblYEa1nF8B2N" alt="CV">
           <div class="cv__item--heading">
             <h2>Lorem, ipsum dolor.</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem, provident!</p>
