--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       
             <div class="location-image">
               <a href="#">
-                  <img src="http://drive.google.com/uc?export=view&id=1gPRhREtZfQokgaTRBAx-u1OSO--eTz-P" alt="3D subjects">  </a>
+                  <img src="http://drive.google.com/uc?export=view&id=    1gPRhREtZfQokgaTRBAx-u1OSO--eTz-P" alt="3D subjects">  </a>
       
             </div>
           </article>
@@ -236,28 +236,28 @@
       <div class="container">
         <!-- dec -->
         <div class="works__dec">
-          <img src="./img/work-dec.png" alt="illustration of leaf" />
+          <img src="./img/work-dec.png" alt="" />
         </div>
         <div class="works__dec">
-          <img src="./img/work-dec.png" alt="illustration of leaf" />
+          <img src="./img/work-dec.png" alt="" />
         </div>
         <!-- heading -->
         <h2>Recent Works</h2>
         <!-- img -->
         <div class="works__img">
           <div class="works__img--single">
-            <img src="./img/1Tệp .jpg" alt="bag" />
+            <img src="./img/1Tệp .jpg" alt="" />
           </div>
           <div class="works__img--single">
-            <img src="./img/6Tệp .jpg" alt="plate" />
+            <img src="./img/6Tệp .jpg" alt="" />
           </div>
           <div class="works__img--single">
-            <img src="./img/3Tệp .jpg" alt="women" />
+            <img src="./img/3Tệp .jpg" alt="" />
           </div>
           <div class="works__img--single4">
-            <img src="./img/4Tệp .jpg" alt="piggy bank" />
-            <img src="./img/2Tệp .jpg" alt="piggy bank" />
-            <img src="./img/5Tệp .jpg" alt="piggy bank" />
+            <img src="./img/4Tệp .jpg" alt="" />
+            <img src="./img/2Tệp .jpg" alt="" />
+            <img src="./img/5Tệp .jpg" alt="" />
           </div>
         </div>  
       </div>
@@ -272,11 +272,11 @@
       <div class="container">
         <!-- dec -->
         <div class="footer__dec">
-          <img src="./img/things-dec-l.png" alt="illustration of leaf" />
+          <img src="./img/things-dec-l.png" alt="" />
         </div>
         <!-- img -->
         <div class="footer__img">
-          <img src="./img/footer-img.png" alt="illustration of women" />
+          <img src="./img/footer-img.png" alt="" />
         </div>
         <!-- heading -->
         <div class="footer__heading">
