--- a/index.html
+++ b/index.html
@@ -73,18 +73,18 @@
       <div class="container">
         <!-- dec -->
         <div class="things__dec">
-          <img src="" alt="illustration of leaf" />
+          <img src="" alt="" />
         </div>
         <!-- dec -->
         <div class="things__dec">
-          <img src="./img/things-dec-r.png" alt="illustration of leaf" />
+          <img src="./img/things-dec-r.png" alt="" />
         </div>
         <!-- heading -->
         <h2>Things I Do</h2>
         <!-- item 1 -->
         <div class="things__item">
           <!-- img -->
-          <img src="https://drive.google.com/file/d/1Hbd9MJX3BQelaXsz42S4qaCHIY-xCrDh/view?usp=share_link" alt="illustration of women" />
+          <img src="https://drive.google.com/file/d/1Hbd9MJX3BQelaXsz42S4qaCHIY-xCrDh/view?usp=share_link" alt="" />
           <!-- text -->
           <div class="things__item--heading">
             <h3>Lorem Ispum</h3>
@@ -98,7 +98,7 @@
         <!-- item 2 -->
         <div class="things__item">
           <!-- img -->
-          <img id="jutdoit" src="./img/things-item-2.png" alt="illustration of women" />
+          <img id="jutdoit" src="./img/things-item-2.png" alt="" />
           <!-- text -->
           <div class="things__item--heading">
             <h3>Lorem Ispum</h3>
@@ -112,7 +112,7 @@
         <!-- item 3 -->
         <div class="things__item">
           <!-- img -->
-          <img src="./img/things-item-3.png" alt="illustration of computer" />
+          <img src="./img/things-item-3.png" alt="" />
           <!-- text -->
           <div class="things__item--heading">
             <h3>Lorem Ispum</h3>
@@ -193,7 +193,7 @@
       
             <div class="location-image">
               <a href="#">
-                  <img src="http://drive.google.com/uc?export=view&id=    1gPRhREtZfQokgaTRBAx-u1OSO--eTz-P" alt="3D subjects">  </a>
+                  <img src="http://drive.google.com/uc?export=view&id=1gPRhREtZfQokgaTRBAx-u1OSO--eTz-P" alt="3D subjects">  </a>
       
             </div>
           </article>
