--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <article id="3694" class="location-listing">
       
             <a class="location-title" href="#">
-                3D            </a>
+                  3D            </a>
       
             <div class="location-image">
               <a href="#">
@@ -272,30 +272,31 @@
       <div class="container">
         <!-- dec -->
         <div class="footer__dec">
-          <img src="./img/things-dec-l.png" alt="" />
+          <img src="" alt="" />
         </div>
         <!-- img -->
         <div class="footer__img">
-          <img src="./img/footer-img.png" alt="" />
+          <img src="" alt="" />
         </div>
         <!-- heading -->
         <div class="footer__heading">
-          <h1>Ready to make something amazing?</h1>
+          <h1>Alo là vào việc</h1>
           <!-- contact -->
           <div class="footer__contact">
             <a href="tel:901234567">
               <i class="fas fa-phone-alt"></i>
-              <p>90-123-4567</p>
+              <p>0938767469</p>
             </a>
             <a href="mailto:info@me.com">
               <i class="fas fa-envelope"></i>
-              <p>info@me.com</p>
+              <p>tanguyenquang3110@gmail.com</p>
             </a>
           </div>
           <div class="banner__socials">
-            <a href="#"><i class="fab fa-dribbble"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.facebook.com/tanguyenquang3110/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/tanguyenquang/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://steamcommunity.com/profiles/76561199046602291/"><i class="fa-brands fa-steam"></i></a>
+            <a href="https://www.linkedin.com/in/tu%E1%BA%A5n-anh-nguy%E1%BB%85n-quang-776335268/"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
